fix overflow-x

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,6 +19,7 @@ body {
           box-sizing: border-box;
      -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .wrapper {
